k8s/landing-page-k8s-yaml/landing-page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-deployment
  labels:
    app: landing-page
  namespace: theiacloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      automountServiceAccountToken: false
      containers:
      - name: landing-page-container
        image: gcr.io/kubernetes-238012/theia-cloud-landing-page
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /config.js
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
          - name: landing-page-config
            mountPath: /usr/share/nginx/html/config.js
            subPath: config.js
      volumes:
        - name: landing-page-config
          configMap:
            name: landing-page-config
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page-service
  labels:
    app: landing-page
  namespace: theiacloud
spec:
  type: ClusterIP
  selector:
    app: landing-page
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
