k8s/landing-page-k8s-yaml/landing-page-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page-ingress
  annotations:
    # specify the name of the global IP address resource to be associated with the HTTP(S) Load Balancer.
    kubernetes.io/ingress.global-static-ip-name: theia-cloud-landing-page-ip
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # controls whether the ingress is modified ‘in-place’,
    # or a new one is created specifically for the HTTP01 challenge.
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: landing-page
  namespace: theiacloud
spec:
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - 34.107.166.228.nip.io
    secretName: landing-page-cert-secret # < cert-manager will store the created certificate in this secret
  rules:
  - host: 34.107.166.228.nip.io
    http:
      paths:
      - backend:
          service:
            name: landing-page-service
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
